# ctc-workshop

./: .gitignore  README.md  pyproject.toml  setup.sh
custom_agents_adk/: fitness_coach.ipynb  fitness_coach.py  movie_recommender.ipynb  movie_recommender.py  recipe_helper.ipynb  recipe_helper.py  study_buddy.ipynb  study_buddy.py  travel_assistant.ipynb  travel_assistant.py  website_builder.ipynb  website_builder.py
docs/: adk-quickstart.md
docs/samples/multi_tool_agent/: agent.py
exercises/01_hello/: hello.ipynb  hello.py
exercises/02_chat/: chat.ipynb
exercises/02_system_prompt/: system_prompt.py
exercises/03_tool/: tool.ipynb  tool.py
exercises/04_tool/: tool.ipynb
exercises/04_tool_exec/: tool_exec.ipynb
exercises/05_tool_exec/: tool_exec.ipynb  tool_exec.py
exercises/05_tool_loop/: tool_loop.ipynb  tool_loop.py
exercises/06_tool_loop/: tool_loop.ipynb
exercises/09_agent_custom/: agent_custom.py
foundation/anthropic/01_hello/: hello.ipynb
foundation/anthropic/02_system_prompt/: system_prompt.ipynb
foundation/anthropic/03_chat/: chat.ipynb  chat.py
foundation/anthropic/04_tool/: tool.ipynb
foundation/anthropic/05_tool_exec/: tool_exec.ipynb
foundation/anthropic/06_tool_loop/: tool_loop.ipynb  tool_loop.py
foundation/anthropic/07_agent_personal/: agent_personal.ipynb  agent_personal.py
multi_agents_adk/: analytics_helpdesk.py  analytics_pipeline.py  multi_agents.ipynb
workshops/00_hello_ai/: workshop.ipynb
workshops/01_file_organizer/: workshop.ipynb
workshops/02_expense_analyzer/: workshop.ipynb
(+39 files in other folders)
