[project]
name = "ctc-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.78.0",
    "ipykernel>=7.2.0",
    "nbconvert>=7.17.0",
    "openai>=2.24.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "ruff>=0.15.0",
]
